Fixed #wrap margin

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -20,7 +20,7 @@ body {
   height: auto !important;
   height: 100%;
   /* Negative indent footer by its height */
-  margin: 0 auto -100px;
+  margin: 0 auto -110px;
   /* Pad bottom by footer height + (optional) extra spacing */
   padding: 0 0 140px;
 }
